# OpenJK-Module-DiscordChat

./: CMakeLists.txt  README.md
include/legacy/: CMakeLists.txt
include/mpp/: mppShared.h
include/openjk/: CMakeLists.txt
include/openjk/cgame/: cg_local.h
include/util/: mpp_cg_chat.h  mpp_scr_draw.h  portable_mutex.h  portable_socket.h  portable_thread.h
server/: run.js
src/: discord_chat.c
